--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,156 +1,179 @@
 {
+  "...character": "character. Character count: ",
   "404.mess": "Sorry, the page you visited does not exist.",
-  "back": "Back",
+  "add.successfully": "Add Successfully !",
+  "advanced.settings": "Advanced Settings",
+  "AI.canvas": "AI Creative Space",
+  "AI.canvas.content": "Harness the power of AI to design, test, and develop products, content, and new ideas quickly and efficiently.",
   "ai.content": "AI Content",
-  "social.media": "Social Media",
-  "media.management": "Media Management",
-  "post.schedule": "Post Schedule",
-  "traffic.grow.center": "Traffic Grow Center",
-  "setting": "Setting",
-  "language": "Language",
-  "how.do.you.want.AI.to.create.your.content?": "How Do You Want AI To Create Your Content?",
-  "train.my.social.media.agent": "Train my social media agent",
-  "let.chow.generate.automatically": "Let Chow generate automatically",
   "AI.generate": "AI Generate",
-  "AI.generate.content": "AI will generate content based on the data you provide, along with sample content and initial foundations that shape the posts.",
   "AI.generate.automatically": "AI generate automatically",
   "AI.generate.automatically.content": "By analyzing your industry, target audience, and provided data, AI can craft engaging and relevant posts that align with your business type",
-  "posting.schedule": "Posting Schedule",
-  "plan.and.manage.your.social.media.content.in.one.place": "Plan and manage your social media content in one place",
-  "schedule.post": "Schedule Post",
-  "learn.how.to.schedule.post": "Learn how to schedule post",
-  "click.here.to.schedule.post": "Click here to schedule post",
-  "select.a.page.to.view.schedule.posts": "Select a page to view schedule posts: ",
-  "view.scheduled.posts": "View schedule posts",
-  "view.scheduled.posts.content": "Choose a page to view and manage scheduled posts, including their status, platform, and actions like edit or remove.",
-  "no.page.available": "No page available?",
-  "let.connect": "Let's connect",
-  "create.a.marketing.plan": "Create a Making Plan",
-  "change.AI.content.generation": "Change AI Content Generation",
-  "select.a.page": "-- Select a Page --",
-  "which.social.platform.do.you.want.AI.to.create.posts.for": "Which social platform do you want AI to create posts for?",
-  "advanced.settings": "Advanced Settings",
+  "AI.generate.content": "AI will generate content based on the data you provide, along with sample content and initial foundations that shape the posts.",
+  "back": "Back",
+  "branch.voice": "Branch Voice",
+  "branch.voice.place.holder": "Professional, Friendly, Casual...",
   "business.type": "Business type: ",
-  "generate.post.content.AI": "Generate Post Content AI",
-  "which.pages.do.you.want.to.generate.for.the.marketing.plan?": "Which pages do you want to generate for the marketing plan?",
-  "welcome.to.your.marketing.strategy.assistant": "Welcome to Your Marketing Strategy Assistant!",
-  "hello...": "Hello! Welcome to our marketing strategy assistant. The information you provide will help us gather the basic details needed to create a tailored marketing plan for you. Let's get started!",
-  "let.get.started": "Let's Get Started!",
-  "manage.your.pages.with.an.App.ID": "Manage your pages with an App ID.",
-  "social.media.management": "Social Media Management",
-  "learn.how.to.set.it.up": "Learn how to set it up!",
-  "social.app.ID": "Social App ID",
-  "enter.your.app.ID.social.media": "Enter your App ID social media",
+  "cancel": "Cancel",
+  "change.AI.content.generation": "Change AI Content Generation",
+  "character.count": "Character Count",
+  "click.here.to.schedule.post": "Click here to schedule post",
+  "click.or.drag.file.upload": "Click or drag file upload",
   "connect": "Connect",
-  "select.a.default.facebook.page": "Select a default Facebook page",
+  "content": "Content: ",
+  "content.is.required": "Content is Required !",
+  "create.a.marketing.plan": "Create a Making Plan",
+  "create.and.schedule.a.new.post": "Create and Schedule a New Post",
+  "create.and.schedule.a.new.post.content": "Option to create content in your own way",
+  "create.now": "Create Now",
+  "created.successfully": "Created Successfully !",
+  "day": "Day",
+  "delete": "Delete",
+  "delete.fail": "Delete Fail !",
+  "delete.successfully": "Delete Successfully !",
+  "deleting": "Deleting ...",
+  "done": "Done",
+  "edit.post": "Edit Post",
+  "empty.toast": "This Field Isn't Empty",
+  "enter.message": "Enter message ...",
+  "enter.your.app.ID.social.media": "Enter your App ID social media",
   "enter.your.business.type": "Enter your Business Type",
-  "save": "Save",
+  "error.generating.marketing.plan": "Error generating marketing plan !",
+  "estimated.generation.time": "Estimated Generation Time: ",
+  "export": "Export",
+  "export.successfully": "Export Successfully !",
+  "fb.page": "Facebook Pages: ",
+  "file.name": "File Name",
+  "generate.post.content.AI": "Generate Post Content AI",
+  "generated.posts": "Generated Posts",
+  "get.list.post.social.media": "Get List Post Social Media",
+  "hello...": "Hello! Welcome to our marketing strategy assistant. The information you provide will help us gather the basic details needed to create a tailored marketing plan for you. Let's get started!",
+  "how.do.you.want.AI.to.create.your.content?": "How Do You Want AI To Create Your Content?",
+  "image.url": "Image URL",
+  "import.external.posts": "Import External Posts",
+  "import.generated.posts.to.build.your.knowledge.base": "Import generated posts to build your knowledge base",
+  "in.page": "Instagram Pages: ",
+  "input.content": "Input Content",
+  "input.url.blog": "Input URL's Blog",
+  "knowledge": " Knowledge",
+  "language": "Language",
+  "learn.how.to.schedule.post": "Learn how to schedule post",
+  "learn.how.to.set.it.up": "Learn how to set it up!",
+  "let.chow.generate.automatically": "Let Chow generate automatically",
+  "let.connect": "Let's connect",
+  "let.get.started": "Let's Get Started!",
+  "list.schedule.post": "List Schedule Post",
+  "login.cancelled.or.invalid.app.ID": "Login cancelled or invalid App ID",
+  "login.now": "Login Now",
+  "login.successful": "Login Successfully !",
   "manage.AI.content": "Manage AI Content",
   "manage.AI.content.content": "Leverage AI tools to generate, manage, and optimize content for marketing, promotions, and customer engagement",
   "manage.social.media": "Manage Social Media",
   "manage.social.media.content": "Organize and manage affiliate links to increase revenue through partnerships and collaborations",
   "manage.traffic.grow.center": "Manage Traffic Grow Center",
-  "what.a.beautiful.day": "What a Beautiful Day",
-  "what.a.beautiful.day.content": "Adjust content settings, including permissions, preferences, and system configurations, to enhance content management efficiency",
+  "manage.your.pages.with.an.App.ID": "Manage your pages with an App ID.",
+  "marketing.plan.generated.successfully": "Marketing Plan generated successfully !",
+  "media.management": "Media Management",
+  "minutes": "Minutes",
+  "month": "Month",
+  "next": "Next",
+  "no.": "No.",
+  "no.page.available": "No page available?",
+  "no.picture": "No picture",
+  "no.post": "You don't have any post AI yet ?",
+  "no.posts.generated.yet": "No posts generated yet",
+  "no.posts.in.knowledge.base.yet": "No posts in knowledge base yet",
+  "optional": "(optional)",
+  "paste": "Paste ",
+  "PDF.only": "PDF Only",
+  "plan.and.manage.your.social.media.content.in.one.place": "Plan and manage your social media content in one place",
+  "please.enter.a.valid.app.ID.": "Please enter a valid App ID.",
+  "please.login": "Your session has expired, please log in again.",
+  "post.fail": "Post Failed !",
+  "post.schedule": "Post Schedule",
+  "post.successfully": "Post Successfully !",
+  "posting.schedule": "Posting Schedule",
+  "posting.time": "Posting Time",
+  "posts": "Post(s)",
+  "posts.detail": "Posts Detail: ",
+  "previous": "Previous",
+  "save": "Save",
+  "save.changes": "Save Changes",
+  "save.successfully": "Save Successfully",
+  "schedule": "Schedule",
+  "schedule.AI.generated.post": "Schedule AI-Generated Post",
+  "schedule.AI.generated.post.content": "Option to retrieve the AI-generated article content for you",
+  "schedule.fb.post": "Schedule Facebook Post",
+  "schedule.in.post": "Schedule Instagram Post",
+  "schedule.li.post": "Schedule LinkedIn Post",
+  "schedule.post": "Schedule Post",
+  "search.knowledge.base": "Search Knowledge Base",
+  "search.your.knowledge.base": "Search Your Knowledge Base",
+  "select.a.default.facebook.page": "Select a default Facebook page",
+  "select.a.page": "-- Select a Page --",
+  "select.a.page.to.view.schedule.posts": "Select a page to view schedule posts: ",
+  "select.a.post": "Select a Post",
+  "select.page": "Select Page",
+  "select.page.fb": "Select Page's Facebook",
+  "select.page.in": "Select Page's Instagram",
+  "setting": "Setting",
   "setting.step1": "Step 1: Visit The Facebook Developers Page",
   "setting.step2": "Step 2: Input Your New App’s Information",
   "setting.step3": "Step 3: Add Products In Your App",
   "setting.step4": "Step 4: Set Up Your Product",
   "setting.step5": "Step 5: Make Your App Live",
-  "previous": "Previous",
-  "next": "Next",
-  "done": "Done",
-  "schedule": "Schedule",
-  "view": "View",
-  "update": "Update",
-  "delete": "Delete",
-  "month": "Month",
-  "day": "Day",
-  "today": "Today",
-  "empty.toast": "This Field Isn't Empty",
-  "save.successfully": "Save Successfully",
-  "which.option.would.you.like.to.choose": "Which option would you like to choose",
-  "schedule.AI.generated.post": "Schedule AI-Generated Post",
-  "schedule.AI.generated.post.content": "Option to retrieve the AI-generated article content for you",
-  "create.and.schedule.a.new.post": "Create and Schedule a New Post",
-  "create.and.schedule.a.new.post.content": "Option to create content in your own way",
-  "which.social.platform.do.you.want.to.schedule.posts.for": "Which social platform do you want to schedule posts for?",
-  "schedule.fb.post": "Schedule Facebook Post",
-  "schedule.in.post": "Schedule Instagram Post",
-  "select.page": "Select Page",
-  "content": "Content: ",
-  "image.url": "Image URL",
-  "input.content": "Input Content",
-  "paste": "Paste ",
-  "posting.time": "Posting Time",
-  "the.character...": " The character count is limited to",
-  "...character": "character. Character count: ",
-  "upload.new.content": "Upload New Content",
-  "optional": "(optional)",
   "simple.content": "Simple Content",
   "simple.content.content": "Make content using the template you uploaded!",
-  "click.or.drag.file.upload": "Click or drag file upload",
-  "PDF.only": "PDF Only",
-  "login.successful": "Login Successfully !",
-  "please.enter.a.valid.app.ID.": "Please enter a valid App ID.",
-  "login.cancelled.or.invalid.app.ID": "Login cancelled or invalid App ID",
-  "login.now": "Login Now",
-  "please.login": "Your session has expired, please log in again.",
-  "get.list.post.social.media": "Get List Post Social Media",
-  "fb.page": "Facebook Pages: ",
-  "in.page": "Instagram Pages: ",
-  "select.page.fb": "Select Page's Facebook",
-  "select.page.in": "Select Page's Instagram",
-  "input.url.blog": "Input URL's Blog",
-  "this.feature.is.under.development": "This Feature is under development !",
+  "social.app.ID": "Social App ID",
+  "social.media": "Social Media",
+  "social.media.management": "Social Media Management",
+  "start.a...": "Start a conversation with the AI to generate marketing content for your social media campaigns.",
   "submit": "Submit",
-  "posts.detail": "Posts Detail: ",
-  "no.": "No.",
-  "uploaded.file.info": "uploaded File Info",
-  "file.name": "File Name",
-  "character.count": "Character Count",
-  "your.social.media.post": " Your social media post... ",
-  "marketing.plan.generated.successfully": "Marketing Plan generated successfully !",
-  "error.generating.marketing.plan": "Error generating marketing plan !",
-  "estimated.generation.time": "Estimated Generation Time: ",
-  "minutes": "Minutes",
-  "cancel": "Cancel",
-  "select.a.post": "Select a Post",
-  "no.post": "You don't have any post AI yet ?",
-  "create.now": "Create Now",
-  "created.successfully": "Created Successfully !",
-  "post.successfully": "Post Successfully !",
-  "post.fail": "Post Failed !",
-  "time.must.10.minutes.later": "Time must 10 minutes later !",
-  "list.schedule.post": "List Schedule Post",
-  "no.picture": "No picture",
-  "content.is.required": "Content is Required !",
-  "delete.successfully": "Delete Successfully !",
-  "delete.fail": "Delete Fail !",
-  "deleting": "Deleting ...",
-  "AI.canvas": "AI Creative Space",
-  "AI.canvas.content": "Harness the power of AI to design, test, and develop products, content, and new ideas quickly and efficiently.",
-  "knowledge": " Knowledge",
-  "search.knowledge.base": "Search Knowledge Base",
-  "search.your.knowledge.base": "Search Your Knowledge Base",
-  "no.posts.in.knowledge.base.yet": "No posts in knowledge base yet",
-  "import.generated.posts.to.build.your.knowledge.base": "Import generated posts to build your knowledge base",
-  "import.external.posts": "Import External Posts",
-  "this.is.prompt.guide...": "This prompt guides the AI in generating marketing content for your brand.",
   "system.prompt": "System Prompt",
-  "branch.voice": "Branch Voice",
-  "branch.voice.place.holder": "Professional, Friendly, Casual...",
   "target.audience": "Target Audience",
   "target.audience.place.holder": "18-24, Professionals, Parents...",
-  "generated.posts": "Generated Posts",
-  "posts": "Post(s)",
-  "export": "Export",
+  "the.character...": " The character count is limited to",
+  "this.feature.is.under.development": "This Feature is under development !",
+  "this.is.prompt.guide...": "This prompt guides the AI in generating marketing content for your brand.",
+  "time.must.10.minutes.later": "Time must 10 minutes later !",
+  "today": "Today",
+  "traffic.grow.center": "Traffic Grow Center",
+  "train.my.social.media.agent": "Train my social media agent",
+  "update": "Update",
+  "upload.new.content": "Upload New Content",
+  "uploaded.file.info": "uploaded File Info",
+  "view": "View",
+  "view.scheduled.posts": "View schedule posts",
+  "view.scheduled.posts.content": "Choose a page to view and manage scheduled posts, including their status, platform, and actions like edit or remove.",
   "welcome.to.chow.AI.canvas": "Welcome to Chow AI Canvas",
-  "start.a...": "Start a conversation with the AI to generate marketing content for your social media campaigns.",
-  "enter.message": "Enter message ...",
-  "add.successfully": "Add Successfully !",
-  "no.posts.generated.yet": "No posts generated yet",
-  "edit.post": "Edit Post",
-  "save.changes": "Save Changes",
-  "export.successfully": "Export Successfully !"
+  "welcome.to.your.marketing.strategy.assistant": "Welcome to Your Marketing Strategy Assistant!",
+  "what.a.beautiful.day": "What a Beautiful Day",
+  "what.a.beautiful.day.content": "Adjust content settings, including permissions, preferences, and system configurations, to enhance content management efficiency",
+  "which.option.would.you.like.to.choose": "Which option would you like to choose",
+  "which.pages.do.you.want.to.generate.for.the.marketing.plan?": "Which pages do you want to generate for the marketing plan?",
+  "which.social.platform.do.you.want.AI.to.create.posts.for": "Which social platform do you want AI to create posts for?",
+  "which.social.platform.do.you.want.to.schedule.posts.for": "Which social platform do you want to schedule posts for?",
+  "your.social.media.post": " Your social media post... ",
+  "profile": "Profile",
+  "a.trustworthy.profile": "A Trustworthy Profile",
+  "a.trustworthy.profile.content": "Manage personal information including name, avatar, contact details, and privacy preferences to ensure your profile remains accurate and professional.",
+  "signin": "Sign In",
+  "signout": "Sign Out",
+  "no.account": "You don't have account ?",
+  "signup.now": "Sign Up Now",
+  "input.your.email": "Input Your Email",
+  "input.your.password": "Input Your Password",
+  "signup": "Sign Up",
+  "input.confirm.password": "Input Confirm Password",
+  "required": "This Field is Required",
+  "password.required": "Password at least 8 characters, numbers, letters, uppercase letters",
+  "signup.successfully": "Sign Up & Sign In Successfully !",
+  "signup.failed": "Sign Up Failed !",
+  "signin.successfully": "Sign In Successfully !",
+  "signin.failed": "Sign In Failed !",
+  "accept": "Accept",
+  "add.xml.file": "Add XML File",
+  "must.import.xml.file": "Must Import XML File",
+  "update.successfully": "Update Successfully !",
+  "update.failed": "Update Failed !"
 }
