--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -1,156 +1,179 @@
 {
+  "...character": "ký tự. Số lượng ký tự: ",
   "404.mess": "Rất tiếc, trang bạn đã truy cập không tồn tại.",
-  "back": "Trở về",
+  "add.successfully": "Thêm Thành Công !",
+  "advanced.settings": "Cài Đặt Nâng Cao",
+  "AI.canvas": "Không Gian Làm Việc Cùng AI",
+  "AI.canvas.content": "Tận dụng sức mạnh của AI để thiết kế, thử nghiệm và phát triển sản phẩm, nội dung và ý tưởng mới một cách nhanh chóng và hiệu quả.",
   "ai.content": "Nội Dung AI",
-  "social.media": "Truyền Thông",
-  "media.management": "Quản Lý Truyền Thông",
-  "post.schedule": "Lịch Trình Đăng Bài",
-  "traffic.grow.center": "Trung Tâm Phát Triển Lượng Truy Cập",
-  "setting": "Cài Đặt",
-  "language": "Ngôn Ngữ",
-  "how.do.you.want.AI.to.create.your.content?": "Bạn Muốn Tạo Nội Dung Của Bạn Thế Nào?",
-  "train.my.social.media.agent": "Huấn luyện trợ lý mạng xã hội của tôi",
-  "let.chow.generate.automatically": "Hãy để Chow tự động tạo ra",
   "AI.generate": "AI tạo nội dung",
-  "AI.generate.content": "AI sẽ tạo nội dung dựa trên dữ liệu bạn cung cấp, cùng với nội dung mẫu và nền tảng ban đầu để định hình bài đăng.",
   "AI.generate.automatically": "AI tạo tự động",
   "AI.generate.automatically.content": "Bằng cách phân tích ngành, đối tượng mục tiêu và dữ liệu được cung cấp, AI có thể tạo ra các bài đăng hấp dẫn và có liên quan phù hợp với loại hình doanh nghiệp của bạn",
-  "posting.schedule": "Lịch Đăng Bài",
-  "plan.and.manage.your.social.media.content.in.one.place": "Lên kế hoạch và quản lý nội dung truyền thông xã hội của bạn ở một nơi",
-  "schedule.post": "Lên lịch",
-  "learn.how.to.schedule.post": "Làm sao để lên lịch",
-  "click.here.to.schedule.post": "Bấm đây để lên lịch",
-  "select.a.page.to.view.schedule.posts": "Chọn 1 trang để xem lịch bài viết: ",
-  "view.scheduled.posts": "Xem bài đã lên lịch",
-  "view.scheduled.posts.content": "Chọn một trang để xem và quản lý các bài đăng đã lên lịch, bao gồm trạng thái, nền tảng và các hành động như chỉnh sửa hoặc xóa.",
-  "no.page.available": "Không có trang nào sẵn?",
-  "let.connect": "Hãy kết nối",
-  "create.a.marketing.plan": "Tạo Kế Hoạch Tiếp Thị",
-  "change.AI.content.generation": "Thay Đổi Cách Tạo Nội Dung AI",
-  "select.a.page": "-- Chọn Trang --",
-  "which.social.platform.do.you.want.AI.to.create.posts.for": "Bạn muốn AI tạo bài đăng cho nền tảng xã hội nào?",
-  "advanced.settings": "Cài Đặt Nâng Cao",
+  "AI.generate.content": "AI sẽ tạo nội dung dựa trên dữ liệu bạn cung cấp, cùng với nội dung mẫu và nền tảng ban đầu để định hình bài đăng.",
+  "back": "Trở về",
+  "branch.voice": "Giọng điệu thương hiệu",
+  "branch.voice.place.holder": "Chuyên nghiệp, Thân thiện, Bình dân...",
   "business.type": "Loại hình kinh doanh",
-  "generate.post.content.AI": "Tạo Nội Dung Bài Đăng AI",
-  "which.pages.do.you.want.to.generate.for.the.marketing.plan?": "Bạn muốn tạo trang nào cho kế hoạch tiếp thị?",
-  "welcome.to.your.marketing.strategy.assistant": "Chào Mừng Bạn Đến Với Trợ Lý Chiến Lược Marketing Của Bạn.",
-  "hello...": "Xin chào! Chào mừng bạn đến với trợ lý chiến lược tiếp thị của chúng tôi. Thông tin bạn cung cấp sẽ giúp chúng tôi thu thập các chi tiết cơ bản cần thiết để tạo ra một kế hoạch tiếp thị phù hợp cho bạn. Hãy bắt đầu nào!",
-  "let.get.started": "Hãy Bắt Đầu Nào!",
-  "manage.your.pages.with.an.App.ID": "Quản lý các trang của bạn bằng App ID.",
-  "social.media.management": "Quản lý phương tiện truyền thông xã hội",
-  "learn.how.to.set.it.up": "Tìm hiểu cách cài đặt!",
-  "social.app.ID": "ID Ứng Dụng Mạng Xã Hội",
-  "enter.your.app.ID.social.media": "Nhập ID của bạn Ứng dụng Truyền thông xã hội ",
+  "cancel": "Hủy",
+  "change.AI.content.generation": "Thay Đổi Cách Tạo Nội Dung AI",
+  "character.count": "Số Ký Tự",
+  "click.here.to.schedule.post": "Bấm đây để lên lịch",
+  "click.or.drag.file.upload": "Nhấn hoặc kéo thả để tải tệp lên",
   "connect": "Kết Nối",
-  "select.a.default.facebook.page": "Chọn trang Facebook mặc định",
+  "content": "Nội Dung: ",
+  "content.is.required": "Nội Dung là Bắt buộc !",
+  "create.a.marketing.plan": "Tạo Kế Hoạch Tiếp Thị",
+  "create.and.schedule.a.new.post": "Tạo và Lên lịch cho Bài Đăng Mới",
+  "create.and.schedule.a.new.post.content": "Tùy chọn tạo nội dung theo cách của riêng bạn",
+  "create.now": "Tạo Ngay",
+  "created.successfully": "Tạo Thành Công !",
+  "day": "Ngày",
+  "delete": "Xóa",
+  "delete.fail": "Xóa Thất Bại !",
+  "delete.successfully": "Xóa Thành Công !",
+  "deleting": "Đang Xóa ...",
+  "done": "Xong",
+  "edit.post": "Chỉnh Sửa Bài Viết",
+  "empty.toast": "Trường Này Không Được Để Trống",
+  "enter.message": "Nhập tin nhắn ...",
+  "enter.your.app.ID.social.media": "Nhập ID của bạn Ứng dụng Truyền thông xã hội ",
   "enter.your.business.type": "Nhập Loại Doanh Ngiệp của bạn",
-  "save": "Lưu",
+  "error.generating.marketing.plan": "Lỗi khi tạo kế hoạch marketing !",
+  "estimated.generation.time": "Thời gian ước tính được tạo ra: ",
+  "export": "Xuất",
+  "export.successfully": "Xuất File Thành Công !",
+  "fb.page": "Trang Facebook: ",
+  "file.name": "Tên File",
+  "generate.post.content.AI": "Tạo Nội Dung Bài Đăng AI",
+  "generated.posts": "Tạo Bài Đăng",
+  "get.list.post.social.media": "Danh Sách Quản Lý Truyền Thông",
+  "hello...": "Xin chào! Chào mừng bạn đến với trợ lý chiến lược tiếp thị của chúng tôi. Thông tin bạn cung cấp sẽ giúp chúng tôi thu thập các chi tiết cơ bản cần thiết để tạo ra một kế hoạch tiếp thị phù hợp cho bạn. Hãy bắt đầu nào!",
+  "how.do.you.want.AI.to.create.your.content?": "Bạn Muốn Tạo Nội Dung Của Bạn Thế Nào?",
+  "image.url": "URL Hình Ảnh",
+  "import.external.posts": "Nhập Bài Post Bên Ngoài",
+  "import.generated.posts.to.build.your.knowledge.base": "Nhập các bài viết đã tạo để xây dựng cơ sở tri thức",
+  "in.page": "Trang Instagram: ",
+  "input.content": "Nhập Nội Dung",
+  "input.url.blog": "Nhập URL của Blog",
+  "knowledge": " Kiến Thức",
+  "language": "Ngôn Ngữ",
+  "learn.how.to.schedule.post": "Làm sao để lên lịch",
+  "learn.how.to.set.it.up": "Tìm hiểu cách cài đặt!",
+  "let.chow.generate.automatically": "Hãy để Chow tự động tạo ra",
+  "let.connect": "Hãy kết nối",
+  "let.get.started": "Hãy Bắt Đầu Nào!",
+  "list.schedule.post": "Danh Sách Bài Đăng",
+  "login.cancelled.or.invalid.app.ID": "Đăng nhập bị từ chối hoặc Sai App ID.",
+  "login.now": "Đăng Nhập Ngay",
+  "login.successful": "Đăng Nhập Thành Công !",
   "manage.AI.content": "Quản Lý Nội Dung AI",
   "manage.AI.content.content": "Tận dụng các công cụ AI để tạo, quản lý và tối ưu hóa nội dung cho hoạt động tiếp thị, quảng cáo và thu hút khách hàng",
   "manage.social.media": "Quản Lý Mạng Xã Hội",
   "manage.social.media.content": "Tổ chức và quản lý các liên kết liên kết để tăng doanh thu thông qua quan hệ đối tác và cộng tác",
   "manage.traffic.grow.center": "Quản lý Trung tâm Phát triển Lưu lượng",
-  "what.a.beautiful.day": "Một Ngày Thật Tuyệt Vời",
-  "what.a.beautiful.day.content": "Điều chỉnh cài đặt nội dung, bao gồm quyền, tùy chọn và cấu hình hệ thống, để nâng cao hiệu quả quản lý nội dung",
+  "manage.your.pages.with.an.App.ID": "Quản lý các trang của bạn bằng App ID.",
+  "marketing.plan.generated.successfully": "Kế hoạch marketing đã được tạo thành công !",
+  "media.management": "Quản Lý Truyền Thông",
+  "minutes": "Phút",
+  "month": "Tháng",
+  "next": "Tiếp",
+  "no.": "STT",
+  "no.page.available": "Không có trang nào sẵn?",
+  "no.picture": "Không có ảnh",
+  "no.post": "Bạn chưa có bài đăng AI nào ?",
+  "no.posts.generated.yet": "Chưa có bài viết nào ",
+  "no.posts.in.knowledge.base.yet": "Chưa có bài viết nào trong cơ sở tri thức",
+  "optional": "(tùy chọn)",
+  "paste": "Dán ",
+  "PDF.only": "Chỉ hỗ trợ PDF",
+  "plan.and.manage.your.social.media.content.in.one.place": "Lên kế hoạch và quản lý nội dung truyền thông xã hội của bạn ở một nơi",
+  "please.enter.a.valid.app.ID.": "Vui lòng nhập App ID.",
+  "please.login": "Phiên của bạn đã hết hạn, vui lòng đăng nhập lại.",
+  "post.fail": "Đăng Bài Thất Bại !",
+  "post.schedule": "Lịch Trình Đăng Bài",
+  "post.successfully": "Đăng Bài Thành Công !",
+  "posting.schedule": "Lịch Đăng Bài",
+  "posting.time": "Thời Gian Đăng",
+  "posts": "Bài Đăng",
+  "posts.detail": "Chi Tiết Bài Đăng: ",
+  "previous": "Trước",
+  "save": "Lưu",
+  "save.changes": "Lưu Thay Đổi",
+  "save.successfully": "Lưu Thành Công",
+  "schedule": "Lên Lịch",
+  "schedule.AI.generated.post": "Lên lịch bài đăng do AI tạo ra",
+  "schedule.AI.generated.post.content": "Tùy chọn để lấy nội dung bài viết do AI tạo ra cho bạn",
+  "schedule.fb.post": "Bài Đăng Facebook",
+  "schedule.in.post": "Bài Đăng Instagram",
+  "schedule.li.post": "Bài Đăng LinkedIn",
+  "schedule.post": "Lên lịch",
+  "search.knowledge.base": "Tìm Kiếm Cơ Sở Tri Thức",
+  "search.your.knowledge.base": "Tìm Kiếm Cơ Sở Tri Thức Của Bạn",
+  "select.a.default.facebook.page": "Chọn trang Facebook mặc định",
+  "select.a.page": "-- Chọn Trang --",
+  "select.a.page.to.view.schedule.posts": "Chọn 1 trang để xem lịch bài viết: ",
+  "select.a.post": "Chọn 1 Bài Đăng",
+  "select.page": "Chọn Trang:",
+  "select.page.fb": "Chọn Trang của Facebook",
+  "select.page.in": "Chọn Trang của Instagram",
+  "setting": "Cài Đặt",
   "setting.step1": "Bước 1: Vào Trang Facebook Developers Page",
   "setting.step2": "Bước 2: Nhập Thông Tin New App Của Bạn",
   "setting.step3": "Bước 3: Thêm Products vào App",
   "setting.step4": "Bước 4: Cài Đặt Product Của Bạn",
   "setting.step5": "Bước 5: Mở Hoạt Động App Của Bạn",
-  "previous": "Trước",
-  "next": "Tiếp",
-  "done": "Xong",
-  "schedule": "Lên Lịch",
-  "view": "Xem",
-  "update": "Cập Nhật",
-  "delete": "Xóa",
-  "month": "Tháng",
-  "day": "Ngày",
-  "today": "Hôm Nay",
-  "empty.toast": "Trường Này Không Được Để Trống",
-  "save.successfully": "Lưu Thành Công",
-  "which.option.would.you.like.to.choose": "Bạn muốn chọn lựa chọn nào?",
-  "schedule.AI.generated.post": "Lên lịch bài đăng do AI tạo ra",
-  "schedule.AI.generated.post.content": "Tùy chọn để lấy nội dung bài viết do AI tạo ra cho bạn",
-  "create.and.schedule.a.new.post": "Tạo và Lên lịch cho Bài Đăng Mới",
-  "create.and.schedule.a.new.post.content": "Tùy chọn tạo nội dung theo cách của riêng bạn",
-  "which.social.platform.do.you.want.to.schedule.posts.for": "Bạn muốn lên lịch đăng bài trên nền tảng mạng xã hội nào?",
-  "schedule.fb.post": "Bài Đăng Facebook",
-  "schedule.in.post": "Bài Đăng Instagram",
-  "select.page": "Chọn Trang:",
-  "content": "Nội Dung: ",
-  "image.url": "URL Hình Ảnh",
-  "input.content": "Nhập Nội Dung",
-  "paste": "Dán ",
-  "posting.time": "Thời Gian Đăng",
-  "the.character...": "Số lượng ký tự bị giới hạn là",
-  "...character": "ký tự. Số lượng ký tự: ",
-  "upload.new.content": "Tải lên nội dung mới",
-  "optional": "(tùy chọn)",
   "simple.content": "Nội dung đơn giản",
   "simple.content.content": "Tạo nội dung bằng mẫu bạn đã tải lên!",
-  "click.or.drag.file.upload": "Nhấn hoặc kéo thả để tải tệp lên",
-  "PDF.only": "Chỉ hỗ trợ PDF",
-  "login.successful": "Đăng Nhập Thành Công !",
-  "please.enter.a.valid.app.ID.": "Vui lòng nhập App ID.",
-  "login.cancelled.or.invalid.app.ID": "Đăng nhập bị từ chối hoặc Sai App ID.",
-  "login.now": "Đăng Nhập Ngay",
-  "please.login": "Phiên của bạn đã hết hạn, vui lòng đăng nhập lại.",
-  "get.list.post.social.media": "Danh Sách Quản Lý Truyền Thông",
-  "fb.page": "Trang Facebook: ",
-  "in.page": "Trang Instagram: ",
-  "select.page.fb": "Chọn Trang của Facebook",
-  "select.page.in": "Chọn Trang của Instagram",
-  "input.url.blog": "Nhập URL của Blog",
-  "this.feature.is.under.development": "Chức năng này đang phát triển !",
+  "social.app.ID": "ID Ứng Dụng Mạng Xã Hội",
+  "social.media": "Truyền Thông",
+  "social.media.management": "Quản lý phương tiện truyền thông xã hội",
+  "start.a...": " Bắt đầu cuộc trò chuyện với AI để tạo nội dung marketing cho các chiến dịch truyền thông xã hội của bạn.",
   "submit": "Xác Nhận",
-  "posts.detail": "Chi Tiết Bài Đăng: ",
-  "no.": "STT",
-  "uploaded.file.info": "Thông Tin FIle Upload",
-  "file.name": "Tên File",
-  "character.count": "Số Ký Tự",
-  "your.social.media.post": " Bài đăng mạng xã hội của bạn... ",
-  "marketing.plan.generated.successfully": "Kế hoạch marketing đã được tạo thành công !",
-  "error.generating.marketing.plan": "Lỗi khi tạo kế hoạch marketing !",
-  "estimated.generation.time": "Thời gian ước tính được tạo ra: ",
-  "minutes": "Phút",
-  "cancel": "Hủy",
-  "select.a.post": "Chọn 1 Bài Đăng",
-  "no.post": "Bạn chưa có bài đăng AI nào ?",
-  "create.now": "Tạo Ngay",
-  "created.successfully": "Tạo Thành Công !",
-  "post.successfully": "Đăng Bài Thành Công !",
-  "post.fail": "Đăng Bài Thất Bại !",
-  "time.must.10.minutes.later": "Thời gian đăng ít nhất 10p so với hiện tại !",
-  "list.schedule.post": "Danh Sách Bài Đăng",
-  "no.picture": "Không có ảnh",
-  "content.is.required": "Nội Dung là Bắt buộc !",
-  "delete.successfully": "Xóa Thành Công !",
-  "delete.fail": "Xóa Thất Bại !",
-  "deleting": "Đang Xóa ...",
-  "AI.canvas": "Không Gian Làm Việc Cùng AI",
-  "AI.canvas.content": "Tận dụng sức mạnh của AI để thiết kế, thử nghiệm và phát triển sản phẩm, nội dung và ý tưởng mới một cách nhanh chóng và hiệu quả.",
-  "knowledge": " Kiến Thức",
-  "search.knowledge.base": "Tìm Kiếm Cơ Sở Tri Thức",
-  "search.your.knowledge.base": "Tìm Kiếm Cơ Sở Tri Thức Của Bạn",
-  "no.posts.in.knowledge.base.yet": "Chưa có bài viết nào trong cơ sở tri thức",
-  "import.generated.posts.to.build.your.knowledge.base": "Nhập các bài viết đã tạo để xây dựng cơ sở tri thức",
-  "import.external.posts": "Nhập Bài Post Bên Ngoài",
-  "this.is.prompt.guide...": "Prompt này hướng dẫn AI tạo nội dung tiếp thị cho thương hiệu của bạn.",
   "system.prompt": "Hướng Dẫn Hệ Thống",
-  "branch.voice": "Giọng điệu thương hiệu",
-  "branch.voice.place.holder": "Chuyên nghiệp, Thân thiện, Bình dân...",
   "target.audience": "Đối tượng mục tiêu",
   "target.audience.place.holder": "18-24 tuổi, Người đi làm, Phụ huynh...",
-  "generated.posts": "Tạo Bài Đăng",
-  "posts": "Bài Đăng",
-  "export": "Xuất",
+  "the.character...": "Số lượng ký tự bị giới hạn là",
+  "this.feature.is.under.development": "Chức năng này đang phát triển !",
+  "this.is.prompt.guide...": "Prompt này hướng dẫn AI tạo nội dung tiếp thị cho thương hiệu của bạn.",
+  "time.must.10.minutes.later": "Thời gian đăng ít nhất 10p so với hiện tại !",
+  "today": "Hôm Nay",
+  "traffic.grow.center": "Trung Tâm Phát Triển Lượng Truy Cập",
+  "train.my.social.media.agent": "Huấn luyện trợ lý mạng xã hội của tôi",
+  "update": "Cập Nhật",
+  "upload.new.content": "Tải lên nội dung mới",
+  "uploaded.file.info": "Thông Tin FIle Upload",
+  "view": "Xem",
+  "view.scheduled.posts": "Xem bài đã lên lịch",
+  "view.scheduled.posts.content": "Chọn một trang để xem và quản lý các bài đăng đã lên lịch, bao gồm trạng thái, nền tảng và các hành động như chỉnh sửa hoặc xóa.",
   "welcome.to.chow.AI.canvas": "Chào mừng đến với Chow AI Canvas",
-  "start.a...": " Bắt đầu cuộc trò chuyện với AI để tạo nội dung marketing cho các chiến dịch truyền thông xã hội của bạn.",
-  "enter.message": "Nhập tin nhắn ...",
-  "add.successfully": "Thêm Thành Công !",
-  "no.posts.generated.yet": "Chưa có bài viết nào ",
-  "edit.post": "Chỉnh Sửa Bài Viết",
-  "save.changes": "Lưu Thay Đổi",
-  "export.successfully": "Xuất File Thành Công !"
+  "welcome.to.your.marketing.strategy.assistant": "Chào Mừng Bạn Đến Với Trợ Lý Chiến Lược Marketing Của Bạn.",
+  "what.a.beautiful.day": "Một Ngày Thật Tuyệt Vời",
+  "what.a.beautiful.day.content": "Điều chỉnh cài đặt nội dung, bao gồm quyền, tùy chọn và cấu hình hệ thống, để nâng cao hiệu quả quản lý nội dung",
+  "which.option.would.you.like.to.choose": "Bạn muốn chọn lựa chọn nào?",
+  "which.pages.do.you.want.to.generate.for.the.marketing.plan?": "Bạn muốn tạo trang nào cho kế hoạch tiếp thị?",
+  "which.social.platform.do.you.want.AI.to.create.posts.for": "Bạn muốn AI tạo bài đăng cho nền tảng xã hội nào?",
+  "which.social.platform.do.you.want.to.schedule.posts.for": "Bạn muốn lên lịch đăng bài trên nền tảng mạng xã hội nào?",
+  "your.social.media.post": " Bài đăng mạng xã hội của bạn... ",
+  "profile": "Hồ Sơ",
+  "a.trustworthy.profile": "Một Hồ Sơ Đáng Tin Cậy",
+  "a.trustworthy.profile.content": "Quản lý thông tin cá nhân, bao gồm tên, ảnh đại diện, thông tin liên hệ và các tùy chọn riêng tư, để đảm bảo hồ sơ của bạn luôn chính xác và chuyên nghiệp.",
+  "signin": "Đăng Nhập",
+  "signout": "Đăng Xuất",
+  "no.account": "Bạn chưa có tài khoản ?",
+  "signup.now": "Đăng Ký Ngay",
+  "input.your.email": "Nhập Email",
+  "input.your.password": "Nhập Mật Khẩu",
+  "signup": "Đăng Ký",
+  "input.confirm.password": "Xác Nhận Mật Khẩu",
+  "this.field.is.required": "Trường này là bắt buộc",
+  "password.required": "Mật khẩu ít nhất 8 kí tự, số, chữ, chữ hoa",
+  "signup.successfully": "Đăng Ký và Đăng Nhập thành công!",
+  "signup.failed": "Đăng ký thất bại!",
+  "signin.successfully": "Đăng nhập thành công!",
+  "signin.failed": "Đăng nhập thất bại!",
+  "accept": "Đồng ý",
+  "add.xml.file": "Thêm File XML",
+  "must.import.xml.file": "Phải Nhập Vào File XML",
+  "update.successfully": "Cập Nhật Thành Công !",
+  "update.failed": "Cập Nhật Thất Bại !"
 }
